Fix cutoff text in UV thumbnail title labels

--- a/public/assets/css/uv-ddu.css
+++ b/public/assets/css/uv-ddu.css
@@ -64,3 +64,7 @@
     width: 90% !important;
     /*max-height: 100% !important; */
 }
+
+#uv .tabsContent .thumbs span.label {
+  white-space: normal;
+}
